--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -22,8 +22,8 @@ variables:
   # Project root folder. Point to the folder containing manage.py file.
   projectRoot: $(System.DefaultWorkingDirectory)
 
-  # Python version: 3.7
-  pythonVersion: '3.7'
+  # Python version: 3.10
+  pythonVersion: '3.10'
 
 stages:
 - stage: Build
@@ -85,3 +85,4 @@ stages:
               azureSubscription: $(azureServiceConnectionId)
               appName: $(webAppName)
               package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+              startUpCommand: 'streamlit run app.py --server.address=0.0.0.0 --server.port=8000' 
